@@ -1,7 +1,7 @@
 #! /bin/sh
 
 # Encrypt a password in MD5 format
-#   Copyright (C) 2000 Free Software Foundation, Inc.
+#   Copyright (C) 2000,2002 Free Software Foundation, Inc.
 #
 # This file is free software; you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by
@@ -66,23 +66,24 @@ stty -echo
 
 # Prompt to enter a password.
 echo -n "Password: "
+read -r password
+echo
 
-# read only one line... I don't know any really portable command for this.
-# Does anyone know? -okuji
-if test "x$BASH" = x; then
-    # FIXME: Use Perl instead at the moment.
-    password=`perl -e '$line = <>; print $line;'`
-else
-    # In BASH, use the builtin command ``read''.
-    read -r password
-fi
+# One more time.
+echo -n "Retype password: "
+read -r password2
+echo
 
 # Resume echo backs.
-echo
 stty echo
 
 if test "x$password" = x; then
     echo "Empty password is not permitted."
+    exit 1
+fi
+
+if test "x$password" != "x$password2"; then
+    echo "Sorry, passwords do not match."
     exit 1
 fi
 
